Correction problème affichage version mobile

--- a/menus.css
+++ b/menus.css
@@ -472,6 +472,17 @@ header {
 
 /* MEDIA QUERIES */
 
+@media (max-width: 1200px){
+    #menu{
+        margin-top: -100px;
+        margin-left: 0;
+        margin-bottom: 0;
+        margin-right: 0;
+        z-index: 1;
+        position: relative;
+    }
+}
+
 @media (max-width: 768px){
     h1{
         margin: 0;
@@ -654,3 +665,46 @@ header {
         font-size: 20px;
     }
 }
+
+@media (max-width: 320px){
+    header .bouton-accueil i{
+        font-size: 23px;
+    }
+
+    h1{
+        font-size: 25px;
+    }
+
+    #menu .intro .titre h2{
+        font-size: 20px;
+    }
+
+    #menu .intro .titre i{
+        font-size: 25px;
+        right: 20px;
+    }
+
+    #menu .entrées h3{
+        margin-bottom: 0;
+    }
+
+    #menu .plats h3{
+        margin-bottom: 0;
+    }
+
+    #menu .desserts h3{
+        margin-bottom: 0;
+    }
+
+    .entrées .container .item .prix{
+        font-size: 13px;
+    }
+
+    .plats .container .item .prix{
+        font-size: 13px;
+    }
+
+    .desserts .container .item .prix{
+        font-size: 13px;
+    }
+  }
